stacks-profiler/tests/trybuild/fail/span_if_guard_must_use.stderr
error: unused return value of `Profiler::must_use_span_guard` that must be used
 --> tests/trybuild/fail/span_if_guard_must_use.rs:6:5
  |
6 |     span_if!(true, "forgotten");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: span guard is dropped immediately unless bound; assign it to a variable for the span duration
note: the lint level is defined here
 --> tests/trybuild/fail/span_if_guard_must_use.rs:1:9
  |
1 | #![deny(unused_must_use)]
  |         ^^^^^^^^^^^^^^^
help: use `let _ = ...` to ignore the resulting value
  |
6 |     let _ = span_if!(true, "forgotten");;
  |     +++++++                            +
